--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,27 @@
         android:layout_height="wrap_content"
         android:text="show Radio dialog"
         android:onClick="onShowRadioDialog"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="show Check box dialog"
+        android:onClick="onShowCheckboxDialog"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="show Custom dialog"
+        android:onClick="onShowCustomDialog"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FancyGifDialog"
+        android:onClick="onShowFancyGifDialog"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textResult"
+        android:layout_marginTop="30dp"
+        android:textSize="20dp"/>
 </LinearLayout>
